@@ -30,6 +30,8 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
    * list->string now has an optional parameter: (list->string lst [adjustablep])
  * added seqref, seqset
    seqref is similar to CL elt, seqset is similar to CL (setf elt)
+ * added the global variables *1, *2, *3 to the environment inside the REPL
+   *1..*3 work similar to Common Lisp's *, **, ***
 
  * mlib: added bit
  * mlib: added map, dovector, revappend, nreconc, nreverse, typecase
